--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -9,26 +9,30 @@
                 <MenuItem x:Name="MenuItem_退出" Header="退出" Click="MenuItem_退出_Click"/>
             </MenuItem>
         </Menu>
-        <Grid Background="#FFE5E5E5" Margin="10,102,100,65">
-            <DataGrid x:Name="DataGrid_Main" Margin="0" Loaded="DataGrid_Main_Loaded" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit" OpacityMask="White" FontSize="14" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle_Main}" CellStyle="{DynamicResource DataGridCellStyle1}"/>
+        <Grid Background="#FFE5E5E5" Margin="10,102,100,111">
+            <DataGrid x:Name="DataGrid_Main" Margin="0" Loaded="DataGrid_Main_Loaded" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit" OpacityMask="White" FontSize="14" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle_Main}" CellStyle="{DynamicResource DataGridCellStyle1}" Style="{DynamicResource DataGridStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" FontFamily="SimSun"/>
         </Grid>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom"/>
-        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,113,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14"/>
+        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14" FontFamily="SimSun"/>
         <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="43,72,0,0" VerticalAlignment="Top" Width="80" Height="25" IsEditable="True" OpacityMask="White" ToolTip="年份，支持手动输入" SelectionChanged="ComboBox_Year_SelectionChanged" FontSize="14"/>
         <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="128,72,0,0" VerticalAlignment="Top" Width="60" Height="25" IsReadOnly="True" OpacityMask="White" ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontSize="14"/>
-        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="402,34,0,0" VerticalAlignment="Top" Width="142" Height="25" OpacityMask="White" FontSize="14" SelectionChanged="ComboBox_Type_SelectionChanged"/>
+        <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="381,30,0,0" VerticalAlignment="Top" Width="142" Height="25" OpacityMask="White" FontSize="16" SelectionChanged="ComboBox_Type_SelectionChanged" FontFamily="SimSun"/>
         <Button x:Name="Button_Search" Content="查询" HorizontalAlignment="Left" Margin="360,30,0,0" VerticalAlignment="Top" Width="75" Height="25" OpacityMask="White" Click="Button_Search_Click" FontSize="14" Visibility="Collapsed"/>
-        <TextBlock HorizontalAlignment="Left" Margin="8,75,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="8,76,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14" FontFamily="SimSun"/>
         <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="360,57,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14" Visibility="Collapsed"/>
-        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,83,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click"/>
-        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,457,10,0" VerticalAlignment="Top" Width="75" Height="31" Click="Button_导入Excel_Click"/>
-        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,145,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14" Height="20"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,77,269,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" FontSize="14" RenderTransformOrigin="1.37,0.44" Height="20"/>
-        <Button x:Name="Button_修改结余" Content="修改" HorizontalAlignment="Right" Margin="0,77,100,0" VerticalAlignment="Top" Width="40" Click="Button_修改结余_Click" Height="20"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,40" TextWrapping="Wrap" Text="借方发生额累计：" VerticalAlignment="Bottom"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,232,40" TextWrapping="Wrap" Text="贷方发生额累计：" VerticalAlignment="Bottom"/>
-        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,348,37" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,127,37" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100"/>
-        <TextBlock HorizontalAlignment="Left" Margin="277,30,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24"/>
+        <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click"/>
+        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,457,10,0" VerticalAlignment="Top" Width="75" Height="31" Click="Button_导入Excel_Click" FontFamily="SimSun"/>
+        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,145,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14" Height="20" FontFamily="SimSun"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,78,269,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" FontSize="14" RenderTransformOrigin="1.37,0.44" Height="20" FontFamily="SimSun"/>
+        <Button x:Name="Button_修改结余" Content="修改" HorizontalAlignment="Right" Margin="0,77,100,0" VerticalAlignment="Top" Width="40" Click="Button_修改结余_Click" Height="20" FontFamily="SimSun"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,37" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun-ExtB"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,232,37" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun-ExtB"/>
+        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,348,36" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,127,36" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
+        <TextBlock HorizontalAlignment="Left" Margin="256,28,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24" FontFamily="SimSun"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,79" TextWrapping="Wrap" Text="借方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun-ExtB"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,232,77" TextWrapping="Wrap" Text="贷方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun-ExtB"/>
+        <TextBlock x:Name="TextBlock_借方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,348,77" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,127,75" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
     </Grid>
 </Window>
