--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -15,7 +15,7 @@
             <DataGrid x:Name="DataGrid_Main" Margin="0" CellEditEnding="DataGrid_Main_CellEditEnding" BeginningEdit="DataGrid_Main_BeginningEdit" OpacityMask="White" FontSize="14" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle_Main}" CellStyle="{DynamicResource DataGridCellStyle1}" Style="{DynamicResource DataGridStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" FontFamily="SimSun" Loaded="DataGrid_Main_Loaded"/>
         </Grid>
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom" FontFamily="SimSun"/>
-        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14" FontFamily="SimSun"/>
+        <Button x:Name="Button_Excel" Content="Excel" HorizontalAlignment="Right" Margin="0,0,10,148" VerticalAlignment="Bottom" Width="75" Click="Button_Excel_Click" Height="25" FontSize="14" FontFamily="SimSun"/>
         <ComboBox x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="80" OpacityMask="White" ToolTip="年份" SelectionChanged="ComboBox_Year_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
         <ComboBox x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,75,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True" OpacityMask="White" ToolTip="月份" SelectionChanged="ComboBox_Month_SelectionChanged" FontSize="14" FontFamily="SimSun"/>
         <ComboBox x:Name="ComboBox_Type" HorizontalAlignment="Left" Margin="381,30,0,0" VerticalAlignment="Top" Width="142" Height="25" OpacityMask="White" FontSize="16" SelectionChanged="ComboBox_Type_SelectionChanged" FontFamily="SimSun"/>
@@ -23,19 +23,19 @@
         <TextBlock HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20" FontSize="14" FontFamily="SimSun"/>
         <Button x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Left" Margin="360,57,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click" FontSize="14" Visibility="Collapsed"/>
         <Button x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" FontSize="14" Click="Button_删除_Click" FontFamily="SimSun"/>
-        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,426,10,0" VerticalAlignment="Top" Width="75" Height="30" Click="Button_导入Excel_Click" FontFamily="SimSun"/>
+        <Button x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="30" Click="Button_导入Excel_Click" FontFamily="SimSun" FontSize="14"/>
         <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,77,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" FontSize="14" Height="20" FontFamily="SimSun" IsReadOnly="True"/>
         <TextBlock HorizontalAlignment="Right" Margin="0,78,225,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top" FontSize="14" RenderTransformOrigin="1.37,0.44" Height="20" FontFamily="SimSun"/>
         <Button x:Name="Button_修改结余" Content="修改" HorizontalAlignment="Right" Margin="0,80,100,0" VerticalAlignment="Top" Width="40" Click="Button_修改结余_Click" Height="20" FontFamily="SimSun" Visibility="Collapsed"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,232,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,206,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14"/>
         <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,348,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,127,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,101,34" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
         <TextBlock HorizontalAlignment="Left" Margin="256,28,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="24" FontFamily="SimSun"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,75" TextWrapping="Wrap" Text="借方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,0,232,75" TextWrapping="Wrap" Text="贷方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,453,75" TextWrapping="Wrap" Text="借方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,206,75" TextWrapping="Wrap" Text="贷方发生额累计(月)：" VerticalAlignment="Bottom" FontFamily="SimSun" FontSize="14"/>
         <TextBlock x:Name="TextBlock_借方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,348,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,127,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计_月" HorizontalAlignment="Right" Margin="0,0,101,73" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="18" Width="100" FontFamily="SimSun" FontWeight="Bold"/>
         <Popup Name="Popup_登陆" StaysOpen="True" Placement="Mouse">
             <Border BorderThickness="2" BorderBrush="SteelBlue" Width="400" Height="200">
                 <Grid Background="White">
@@ -43,7 +43,7 @@
                         <TextBox Height="26" Name="TxtBoxTitle" Width="120" Background="SteelBlue" BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" FontSize="16" Focusable="False" IsHitTestVisible="False" IsTabStop="False" VerticalContentAlignment="Center" FontFamily="SimSun" FontWeight="Bold">登陆</TextBox>
                     </DockPanel>
                     <Grid Margin="0,30,0,0">
-                        <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Center" VerticalContentAlignment="Center" Margin="151,51,45,90" FontSize="20" FontFamily="SimSun"/>
+                        <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Center" VerticalContentAlignment="Center" Margin="151,51,45,90" FontSize="20" FontFamily="SimSun" Text="admin"/>
                         <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="151,88,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20" FontFamily="SimSun"/>
                         <Button x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="151,124,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_登陆_Click" FontFamily="SimSun" FontSize="14"/>
                         <Button x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="248,124,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" FontFamily="SimSun" FontSize="14"/>
